--- a/RAG/PDFRags.ipynb
+++ b/RAG/PDFRags.ipynb
@@ -466,7 +466,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## HSNW parameteres\n",
+        "## HNSW parameteres\n",
         "\n",
         "| Parameter | Purpose |\n",
         "| :---- | :---- |\n",
@@ -476,7 +476,7 @@
         "| **quantizer** | Used for Product Quantization (PQ) to reduce memory usage. |\n",
         "\n",
         "\n",
-        "## HSNW parameteres trad-off\n",
+        "## HNSW parameteres trad-off\n",
         "\n",
         "\n",
         "| Parameter | When to Increase it | Trade-off |\n",
@@ -485,7 +485,7 @@
         "| **max\\_connections** | If you have very high-dimensional vectors or a complex dataset. | Higher memory (RAM) usage. |\n",
         "| **ef (Search)** | If you want better accuracy during a specific search query. | Slower query response time. |\n",
         "\n",
-        "## HSNW parameteres how to tune\n",
+        "## HNSW parameteres how to tune\n",
         "\n",
         "\n",
         "| Strategy | max\\_connections | ef\\_construction | Best For... |\n",
@@ -1137,12 +1137,234 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "## **1️⃣ `RunnableParallel`**\n",
+        "\n",
+        "**Type:** Runnable (low-level)  \n",
+        "**Purpose:** Run **multiple runnables at the same time** in parallel, return all outputs.\n",
+        "\n",
+        "* Input → sent to all child runnables  \n",
+        "* Each child runnable runs **independently**  \n",
+        "* Output is usually a **dict** of all results keyed by runnable names  \n",
+        "* You can post-process the results with `RunnableLambda`\n",
+        "\n",
+        "**Use Cases:**\n",
+        "\n",
+        "* Parallel API calls  \n",
+        "* Parallel LLM calls  \n",
+        "* Parallel retrievers when you want to **merge their outputs manually**"
+      ],
+      "metadata": {
+        "id": "H3c2AJJWFiYa"
+      },
+      "id": "H3c2AJJWFiYa"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.runnables import RunnableParallel, RunnablePassthrough, RunnableLambda\n",
+        "\n",
+        "# Two retrievers\n",
+        "retriever1 = vectorstore.as_retriever(search_kwargs={'alpha': 0.5, 'k': 5})\n",
+        "retriever2 = vectorstore.as_retriever(search_kwargs={'alpha': 0.7, 'k': 3})\n",
+        "\n",
+        "# Parallel retrieval\n",
+        "parallel_retrievers = RunnableParallel(\n",
+        "    r1=retriever1,\n",
+        "    r2=retriever2\n",
+        ")\n",
+        "\n",
+        "# Lambda to join text from all documents into a single string\n",
+        "def flatten_docs(results):\n",
+        "    texts = []\n",
+        "    for docs in results.values():   # docs is a list from each retriever\n",
+        "        for doc in docs:\n",
+        "            # assuming doc has .page_content or 'content' attribute\n",
+        "            if hasattr(doc, \"page_content\"):\n",
+        "                texts.append(doc.page_content)\n",
+        "            elif isinstance(doc, dict) and \"content\" in doc:\n",
+        "                texts.append(doc[\"content\"])\n",
+        "            else:\n",
+        "                texts.append(str(doc))\n",
+        "    return \"\\n\".join(texts)\n",
+        "\n",
+        "join_parallel = RunnableLambda(flatten_docs)\n",
+        "\n",
+        "# Full RAG chain\n",
+        "rag_chain_parallel = (\n",
+        "    {'context': parallel_retrievers | join_parallel, 'question': RunnablePassthrough()}\n",
+        "    | prompt\n",
+        "    | llm\n",
+        "    | StrOutputParser()\n",
+        ")\n",
+        "\n",
+        "query = \"Tell me full tutorial of SQL cheatsheet make it understandable.\"\n",
+        "print(\"Assistant is thinking...\\n\")\n",
+        "print(rag_chain_parallel.invoke(query))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aNeNSMVnE9pv",
+        "outputId": "f03cb29b-12e2-43aa-f23c-2668b2a7c4d2"
+      },
+      "id": "aNeNSMVnE9pv",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Assistant is thinking...\n",
+            "\n",
+            " Certainly! Below is a comprehensive guide to SQL, covering various aspects from basic commands to advanced concepts. This guide will help you understand the SQL cheat sheet created by Vinay Kumar Panika and expand upon it to provide a full tutorial.\n",
+            "\n",
+            "### 1. What is SQL?\n",
+            "SQL (Structured Query Language) is the standard language for accessing and manipulating databases. It enables users to perform tasks such as querying data, updating records, creating database objects, and managing security.\n",
+            "\n",
+            "### 2. What is a Database?\n",
+            "A database is a structured collection of data stored in a computer system. Databases are designed to be easily accessed, managed, and modified. They support activities like data retrieval, data analysis, and data modification.\n",
+            "\n",
+            "### 3. What are the types of SQL commands?\n",
+            "SQL commands are categorized into four main types: **DDL (Data Definition Language)**, **DML (Data Manipulation Language)**, **DCL (Data Control Language)**, and **DQL (Data Query Language)**.\n",
+            "\n",
+            "- **DDL**: Used to create, alter, and drop database objects like tables, indexes, etc. (`CREATE`, `ALTER`, `DROP`).\n",
+            "- **DML**: Used to query data (`SELECT`), as well as insert, update, and delete data (`INSERT`, `UPDATE`, `DELETE`).\n",
+            "- **DCL**: Used for database security and administration, including setting permissions (`GRANT`, `REVOKE`).\n",
+            "- **DQL**: Used to read data from the database (`SELECT`).\n",
+            "\n",
+            "### 4. What is Primary Key?\n",
+            "A primary key is a column or a set of columns that uniquely identifies each row in a table. It must contain unique values, and no nulls are allowed. Each table can have only one primary key.\n",
+            "\n",
+            "### 5. What is Foreign Key?\n",
+            "A foreign key is a field (or collection of fields) that creates a link between data in two tables. The foreign key in one table points to the primary key in another table, thereby establishing a relationship between them.\n",
+            "\n",
+            "### 6. What is UNIQUE Key?\n",
+            "A unique key is a column or a set of columns that uniquely identifies each row in a table and allows for one or more nulls. Unlike a primary key, a table can have multiple unique keys.\n",
+            "\n",
+            "### 7. What is the difference between Primary Key and UNIQUE Key?\n",
+            "- **Primary Key**: Ensures that every row in a table has a unique identifier. It cannot allow NULLs. There can be only one primary key per table.\n",
+            "- **UNIQUE Key**: Also ensures uniqueness but allows for one or more columns to contain NULLs, and there can be multiple UNIQUE keys in a table.\n",
+            "\n",
+            "### 8. What is NOT NULL constraint?\n",
+            "A `NOT NULL` constraint specifies that a column cannot hold a NULL value. Every row must have a value for a `NOT NULL` column.\n",
+            "\n",
+            "### 9. What is Default Constraint?\n",
+            "A default constraint specifies a default value for a column. If a new row is inserted without a value for this column, the default value will be used.\n",
+            "\n",
+            "### 10. What is the difference between DELETE, TRUNCATE, and DROP?\n",
+            "- **DELETE**: Removes records from a table but leaves the table structure intact.\n",
+            "- **TRUNCATE**: Also removes all records from a table but, unlike `DELETE`, it cannot be used where a primary key or foreign key exists and is faster because it ignores transactions.\n",
+            "- **DROP**: Removes both the data and the table definition from the database.\n",
+            "\n",
+            "### 11. What is the difference between WHERE and HAVING?\n",
+            "- **WHERE Clause**: Filters records before any groupings are made (on individual rows) and cannot be used inside aggregate functions like `SUM()`, `COUNT()`, etc.\n",
+            "- **HAVING Clause**: Filters groups of records after the data has been aggregated (used with `GROUP BY`).\n",
+            "\n",
+            "### 12. What are Joins in SQL?\n",
+            "Joins are used to combine rows from two or more tables based on a related column between them. There are several types of joins:\n",
+            "\n",
+            "- **INNER JOIN**: Returns records where there is at least one match in both tables.\n",
+            "- **LEFT (OR LEFT OUTER) JOIN**: Returns all records from the left table, and matched records from the right table. If there is no match, the result is NULL on the right side.\n",
+            "- **RIGHT (OR RIGHT OUTER) JOIN**: The opposite of a left join; returns all records from the right table, and matched records from the left table. If there is no match, the result is NULL on the left side.\n",
+            "- **FULL (OR FULL OUTER) JOIN**: Returns all records when there is a match in one of the tables.\n",
+            "\n",
+            "### 13. What is INNER JOIN?\n",
+            "An inner join retrieves rows when there is at least one matching value between the tables being joined. If there is no match, those rows will not appear in the result set.\n",
+            "\n",
+            "### 14. What is LEFT JOIN?\n",
+            "A left join returns all rows from the left table, and the matched rows from the right table. The result is NULL from the right side if there is no match.\n",
+            "\n",
+            "### 15. What is RIGHT JOIN?\n",
+            "A right join returns all rows from the right table, along with the matched rows from the left table. The result is NULL from the left side if there is no match.\n",
+            "\n",
+            "### 16. What is FULL JOIN?\n",
+            "A full join returns all rows from both tables, with rows combined where there is a match in either table.\n",
+            "\n",
+            "### 17. What is Self Join?\n",
+            "A self join occurs when a table joins to itself. This is useful when you have data that relates back to itself.\n",
+            "\n",
+            "### 18. What is Cross Join?\n",
+            "A cross join (or Cartesian product) takes every row from the first table and matches it with every row from the second table, which can result in a large number of rows.\n",
+            "\n",
+            "### 19. What is Union and Union All?\n",
+            "- **UNION**: Combines the results of two queries into a single result set by eliminating duplicate values.\n",
+            "- **UNION ALL**: Combines the results of two queries into a single result set without eliminating duplicate values.\n",
+            "\n",
+            "### 20. What is the difference between UNION and UNION ALL?\n",
+            "- **UNION** removes duplicates, ensuring each record appears only once in the final result set.\n",
+            "- **UNION ALL** includes all records from both queries, even if some are duplicates.\n",
+            "\n",
+            "### 21. What is Normalization?\n",
+            "Normalization is the process of organizing data in a database to reduce redundancy and improve data integrity. It involves dividing a database into two or more tables and defining relationships between the tables.\n",
+            "\n",
+            "### 22. What is Denormalization?\n",
+            "Denormalization is the process of intentionally introducing redundancy into a database to improve performance for read-heavy operations. This is often done in data warehousing scenarios.\n",
+            "\n",
+            "### 23. What is the difference between CHAR and VARCHAR?\n",
+            "- **CHAR**: Fixed-length string data type. The length is specified either in bytes or in characters (for character sets where one character is always one byte). It will take up the same amount of space every time, even if the content doesn't fill it.\n",
+            "- **VARCHAR**: Variable-length string data type. The length must be specified when creating a table, but unlike `CHAR`, it only stores the actual length of the data. It is more space-efficient for variable-length strings.\n",
+            "\n",
+            "### 24. What is the difference between SQL and MySQL?\n",
+            "- **SQL**: A language for managing and manipulating databases. SQL itself is not a specific product but a standard language used by many database systems.\n",
+            "- **MySQL**: An open-source relational database management system that implements SQL. It is one of the most popular database systems in use today.\n",
+            "\n",
+            "### 25. What is Auto Increment in SQL?\n",
+            "Auto Increment is a constraint on a column that automatically generates a unique value for each row with this attribute set, typically used for primary keys.\n",
+            "\n",
+            "### Additional Concepts and Commands:\n",
+            "\n",
+            "- **Window Functions**: Operations applied to a set of rows defined by the `OVER` clause, which allows for calculations across sets of rows.\n",
+            "- **Common Table Expressions (CTEs)**: Temporary result sets that you can reference within a SELECT, INSERT, UPDATE, or DELETE statement.\n",
+            "- **Subqueries**: Queries nested inside another query.\n",
+            "- **Indexes**: Special lookup tables used to speed up data retrieval operations on a database table at the cost of additional writes and storage space.\n",
+            "- **Views**: Virtual tables defined by a query that can be used by users who are not always aware of the underlying table structure.\n",
+            "- **Stored Procedures**: Programmable objects that contain a series of SQL statements that can be executed as a single operation.\n",
+            "- **Functions**: Encapsulated code blocks that perform an operation and return a value. They can be scalar (returning a single value) or table-valued (returning a set of values).\n",
+            "- **Transactions**: A sequence of database operations that are treated as a single unit, ensuring data integrity and consistency.\n",
+            "\n",
+            "This cheat sheet should provide a comprehensive overview of SQL and its various components. Remember that the exact syntax may vary depending on the database system you are using (e.g., MySQL, PostgreSQL, SQL Server, etc.), but the fundamental concepts remain consistent across different systems.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Ensemble retriever method"
       ],
       "metadata": {
         "id": "YIAs54QG9syZ"
       },
       "id": "YIAs54QG9syZ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **2️⃣ `EnsembleRetriever`**\n",
+        "\n",
+        "**Type:** Retriever (high-level)  \n",
+        "**Purpose:** Run **multiple retrievers** and **combine their results automatically**.\n",
+        "\n",
+        "* Each retriever fetches documents independently  \n",
+        "* Combines results using a **strategy**, like:  \n",
+        "  * Concatenate  \n",
+        "  * Deduplicate  \n",
+        "  * Rerank (optional)  \n",
+        "* Returns a **single unified list of documents**  \n",
+        "* No need to manually flatten or merge outputs\n",
+        "\n",
+        "**Use Cases:**\n",
+        "\n",
+        "* RAG pipelines with multiple sources  \n",
+        "* Combining structured and unstructured data  \n",
+        "* When you don’t want to manually manage merging\n"
+      ],
+      "metadata": {
+        "id": "nPZEhN9qGPwo"
+      },
+      "id": "nPZEhN9qGPwo"
     },
     {
       "cell_type": "code",
@@ -1375,7 +1597,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### RAG implementation"
+      ],
       "metadata": {
         "id": "FJs9HgGl-mfQ"
       },
