--- a/RAG/Self-Reflecting-Agent.ipynb
+++ b/RAG/Self-Reflecting-Agent.ipynb
@@ -4,31 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🧠 Self-Reflecting Agentic AI (No APIs, No LLMs)\n",
+    "# 🧠 Self-Reflecting Agent in Production using LangGraph\n",
     "\n",
-    "This tutorial demonstrates a **real, runnable self-reflecting agent** using:\n",
+    "This notebook demonstrates a **production-style agentic AI pattern** using **LangGraph**.\n",
     "\n",
-    "- Pure Python\n",
-    "- Local ML model (scikit-learn)\n",
-    "- Agentic loop inspired by **LangGraph**\n",
+    "✔ No LLM APIs\n",
+    "✔ No OpenAI / Anthropic calls\n",
+    "✔ Fully local ML model\n",
+    "✔ Real **self-reflection loop**\n",
     "\n",
-    "💡 The agent **observes its own past actions**, reflects on failures, and **changes behavior automatically**."
+    "This is how self-reflection is **actually structured in production systems**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔍 What is Self-Reflection in Agentic AI?\n",
+    "## 🧩 Agent State (Shared Across LangGraph Nodes)\n",
     "\n",
-    "A self-reflecting agent:\n",
-    "\n",
-    "1. Takes actions\n",
-    "2. Stores outcomes in memory\n",
-    "3. Evaluates past performance\n",
-    "4. Modifies future decisions\n",
-    "\n",
-    "This is **core to agentic systems**, planning loops, and autonomous ML pipelines."
+    "The state flows through the graph and is **mutated by each node**."
    ]
   },
   {
@@ -37,34 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
     "from dataclasses import dataclass, field\n",
     "from typing import List, Dict, Any\n",
     "\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 🧩 Agent State (LangGraph-Style)\n",
-    "\n",
-    "The **state** flows between nodes.\n",
-    "\n",
-    "- `history` → memory of past actions\n",
-    "- `strategy` → current decision policy\n",
-    "- `done` → termination signal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "@dataclass\n",
     "class AgentState:\n",
     "    history: List[Dict[str, Any]] = field(default_factory=list)\n",
@@ -76,11 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ⚙️ Action Node: Train a Local ML Model\n",
+    "## 📦 Local ML Dependencies (Casual Model)\n",
     "\n",
-    "This node represents an **agent action**.\n",
-    "\n",
-    "The agent trains a model differently based on its **current strategy**."
+    "We intentionally use **simple local ML** to keep the focus on **agent behavior**, not model complexity."
    ]
   },
   {
@@ -89,7 +56,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(state: AgentState):\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚙️ LangGraph Action Node: Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model_node(state: AgentState) -> AgentState:\n",
     "    X, y = make_classification(\n",
     "        n_samples=200,\n",
     "        n_features=5,\n",
@@ -104,12 +89,12 @@
     "    acc = accuracy_score(y[150:], preds)\n",
     "\n",
     "    state.history.append({\n",
-    "        \"action\": \"train_model\",\n",
+    "        \"node\": \"train_model\",\n",
     "        \"strategy\": state.strategy,\n",
     "        \"accuracy\": acc\n",
     "    })\n",
     "\n",
-    "    print(f\"[Action] Strategy={state.strategy} | Accuracy={acc:.2f}\")\n",
+    "    print(f\"[Train] strategy={state.strategy} | accuracy={acc:.2f}\")\n",
     "    return state"
    ]
   },
@@ -117,14 +102,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔁 Reflection Node (The Brain)\n",
+    "## 🔁 LangGraph Reflection Node\n",
     "\n",
-    "This node **reads the agent’s own history** and decides:\n",
+    "This node **inspects prior actions** and decides whether to:\n",
     "\n",
-    "- Should I change strategy?\n",
-    "- Should I stop?\n",
-    "\n",
-    "This is **true self-reflection**, not hardcoded control flow."
+    "- Change strategy\n",
+    "- Continue execution\n",
+    "- Terminate the graph"
    ]
   },
   {
@@ -133,21 +117,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reflect(state: AgentState):\n",
-    "    last = state.history[-1]\n",
-    "    acc = last[\"accuracy\"]\n",
+    "def reflection_node(state: AgentState) -> AgentState:\n",
+    "    last_action = state.history[-1]\n",
+    "    acc = last_action[\"accuracy\"]\n",
     "\n",
-    "    print(f\"[Reflection] Evaluating accuracy: {acc:.2f}\")\n",
+    "    print(f\"[Reflect] evaluating accuracy={acc:.2f}\")\n",
     "\n",
     "    if acc < 0.75:\n",
-    "        print(\"[Reflection] Performance low → switching strategy\")\n",
+    "        print(\"[Reflect] accuracy low → switching strategy\")\n",
     "        state.strategy = \"improved\"\n",
     "    else:\n",
-    "        print(\"[Reflection] Performance acceptable → stopping\")\n",
+    "        print(\"[Reflect] accuracy acceptable → stopping graph\")\n",
     "        state.done = True\n",
     "\n",
     "    state.history.append({\n",
-    "        \"action\": \"reflect\",\n",
+    "        \"node\": \"reflection\",\n",
     "        \"decision\": state.strategy,\n",
     "        \"stop\": state.done\n",
     "    })\n",
@@ -159,9 +143,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🧭 Control Node (Graph Edge Logic)\n",
+    "## 🧭 LangGraph Conditional Edge\n",
     "\n",
-    "This replaces LangGraph conditional edges."
+    "This replaces `while` loops and controls **graph execution**."
    ]
   },
   {
@@ -170,19 +154,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def should_continue(state: AgentState):\n",
-    "    return not state.done"
+    "def should_continue(state: AgentState) -> str:\n",
+    "    return \"end\" if state.done else \"train\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔄 Agentic Execution Loop\n",
-    "\n",
-    "This simulates a **LangGraph execution**:\n",
-    "\n",
-    "`Action → Reflection → Decision → Loop`"
+    "## 🕸️ Build the LangGraph"
    ]
   },
   {
@@ -191,24 +171,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_agent():\n",
-    "    state = AgentState()\n",
-    "    step = 0\n",
+    "from langgraph.graph import StateGraph, END\n",
     "\n",
-    "    while should_continue(state) and step < 3:\n",
-    "        print(f\"\\n=== Step {step + 1} ===\")\n",
-    "        state = train_model(state)\n",
-    "        state = reflect(state)\n",
-    "        step += 1\n",
+    "graph = StateGraph(AgentState)\n",
     "\n",
-    "    return state"
+    "graph.add_node(\"train\", train_model_node)\n",
+    "graph.add_node(\"reflect\", reflection_node)\n",
+    "\n",
+    "graph.set_entry_point(\"train\")\n",
+    "\n",
+    "graph.add_edge(\"train\", \"reflect\")\n",
+    "\n",
+    "graph.add_conditional_edges(\n",
+    "    \"reflect\",\n",
+    "    should_continue,\n",
+    "    {\n",
+    "        \"train\": \"train\",\n",
+    "        \"end\": END\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "agent_graph = graph.compile()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ▶️ Run the Self-Reflecting Agent"
+    "## ▶️ Run the Production-Style Agent"
    ]
   },
   {
@@ -217,26 +207,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_state = run_agent()\n",
+    "final_state = agent_graph.invoke(AgentState())\n",
     "\n",
     "print(\"\\n--- FINAL AGENT MEMORY ---\")\n",
-    "for item in final_state.history:\n",
-    "    print(item)"
+    "for h in final_state.history:\n",
+    "    print(h)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ✅ Why This Is a Real Agentic System\n",
+    "## 🧠 Why This Matches Production LangGraph Usage\n",
     "\n",
-    "- ✔ Reads its own memory\n",
-    "- ✔ Reflects on failures\n",
-    "- ✔ Changes behavior\n",
-    "- ✔ Stops autonomously\n",
-    "- ✔ No LLMs, no APIs, no magic\n",
+    "- ✔ Explicit state object\n",
+    "- ✔ Modular nodes\n",
+    "- ✔ Conditional edges\n",
+    "- ✔ Reflection controls execution\n",
+    "- ✔ Drop-in LLM replacement later\n",
     "\n",
-    "🎯 This pattern scales directly to **LangGraph + LLM reflection** later."
+    "This pattern scales directly to:\n",
+    "- LLM-as-judge reflection\n",
+    "- Tool-using agents\n",
+    "- Multi-agent graphs\n",
+    "- RAG pipelines"
    ]
   }
  ],
